fixed an issue where the project bar would be shifted down when in desktop mode

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -51,6 +51,7 @@
 			&.open {
 				width: min(40%, f.rem(350));
 				position: relative;
+				top: 0;
 				transform: translateX(0);
 				opacity: 1;
 				pointer-events: auto;
